# NLPPP

./: .env.example  .gitignore  README.md  app.py  dataset_schema.md  debug_tokens.py  merge.py  models.py  pyproject.toml  qasper_overview.ipynb  requirements.txt  submit_ft_scratch.sh  submit_llama_tulu_finetune.sh  submit_qwen_finetune.sh  submit_tulu_qasper.sh  train_qwen_qasper.py
data/processed/: train_pairs.json  val_pairs.json
data/qasper/processed/: finetuning_dataset.parquet  finetuning_dataset_final.parquet  processed.parquet
data/qasper/raw/: test.parquet  train.parquet  validation.parquet
evaluation_ui/: demo.py
finetune/: finetuning.py  finetuning_tulu.py  ft_scratch.py  inference_ft_scratch.py  inference_simple.py  inference_tulu.py  run_qwen_0.5B.sh  train_qwen_0.5B_qasper.py
finetune_instruct/: infer.py  tulu_qasper_finetune.py
langgraph/: main.py  nli.py  rag.py  rewrite.py  state.py
pipeline/: constant.py  constants.py  generate.py  grade.py  main.py  nli.py  rag.py  rewrite.py  state.py
rag_QA/: nli.py
rag_QA/langgraph/contradiction/: __init__.py  evaluate.py  nli.py  test_cases.json
rag_QA/vectorDB/: helpers.py  queryDB.py  scraper.py  upsertData.py
src/: main.py
src/data_processing/: build_chunks.py
src/discovery/: acl_discovery.py  metadata_enricher.py
src/ingestion/: qasper.py
src/modeling/: inference.py  lora_finetune.py
src/models/: __init__.py  processed.py  qasper.py
src/processing/: qasper.py
src/rag/: answer_generator.py  conflict_resolver.py
src/retrieval/: fuzzy_matcher.py  vector_store.py
