[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "nlppp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]


[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
discovery = [
    "acl-anthology>=1.1.0",
    "requests",
    "beautifulsoup4",
    "semanticscholar",
]

ingest = [
    "datasets>=4.8.4",
    "huggingface-hub>=1.9.0",
    "pandas>=3.0.2",
    # "docling", # Chunky requires GPU but maybe
    # "grobid-client-python>=0.1.4", No Good
    "pymupdf4llm",
]

full = ["nlppp[discovery, ingest]"]
